src/components/StreamPicker/StreamPicker.module.scss
.sheet {
  height: 100%;
}

.wrapper {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.inputWrapper {
  flex: 0;
  padding: 8px 8px 0 8px;
}

.streamsWrapper {
  flex: 1;
  overflow: auto;
  padding: 8px;
}

